--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=server
+
+# Config Database
+spring.datasource.url=jdbc:postgresql://localhost:5432/document-db
+spring.datasource.username=root
+spring.datasource.password=root
+#spring.jpa.hibernate.ddl-auto=update
+
+# Config Spring Security
+spring.security.user.name=root
+spring.security.user.password=root
+logging.level.org.springframework.security=DEBUG
