--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=server
 
 # Config Database
 spring.datasource.url=jdbc:postgresql://localhost:5432/document-db
-spring.datasource.username=root
+spring.datasource.username=postgres
 spring.datasource.password=root
 #spring.jpa.hibernate.ddl-auto=update
 
