--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.14.0",
+    "antd": "^5.21.6",
     "axios": "^1.7.7",
     "ckeditor5": "^43.2.0",
     "init": "^0.1.2",
