Add Dockerfile, docker-compose

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,12 +1,18 @@
-spring.application.name=server
+spring.config.import=optional:file:.env[.properties]
 
-# Config Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/document-db
-spring.datasource.username=postgres
-spring.datasource.password=root
+# Application Configuration
+spring.application.name=server
+server.port=8080
+
+# Database Configuration
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 #spring.jpa.hibernate.ddl-auto=update
 
-# Config Spring Security
-spring.security.user.name=root
-spring.security.user.password=root
+# Spring Security Configuration
+spring.security.user.name=${SECURITY_USERNAME}
+spring.security.user.password=${SECURITY_PASSWORD}
+
+# Logging Configuration
 logging.level.org.springframework.security=DEBUG
