--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,40 @@
-/client/node_modules/
+.DS_Store
+Thumbs.db
+*.log
+*.tmp
+*.cache
+.env
+.idea/
+.vscode/
+.git
+.gitignore
+
+/client/node_modules
 /client/package-lock.json
+/client/build
+/client/dist
+/client/coverage
 /client/.env
-/server/target/
+/client/.env.local
+/client/.env.development.local
+/client/.env.test.local
+/client/.env.production.local
+/client/.pnp
+/client/pnpm-debug.log*
+/client/npm-debug.log*
+/client/yarn-debug.log*
+/client/yarn-error.log*
+
 /server/.env
+/server/.env.local
+/server/.env.development.local
+/server/.env.test.local
+/server/.env.production.local
+/server/target
+/server/logs
+/server/.idea
+/server/.vscode
+/server/.settings
+/server/.classpath
+/server/.project
+/server/.factorypath
